k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k3s-demo
  labels:
    app.kubernetes.io/part-of: k3s-demo
