k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3s-demo
spec:
  selector:
    app.kubernetes.io/name: k3s-demo
  ports:
    - name: http
      port: 80
      targetPort: http
